--- a/index.html
+++ b/index.html
@@ -645,7 +645,8 @@ img.img-fluid {
 'MarketPlace',
 'Logistics',
 'Customer Service',
-'Dark Store' ]
+'Dark Store' ],
+'EGP': ['Brief']
         };
 
         const stepsDetails = {
@@ -2300,6 +2301,30 @@ img.img-fluid {
 </ul>
 
 <p>This SOP ensures smooth coordination between the CS and Dark Store teams, with clear protocols for handling customer complaints and escalations effectively.</p>
+
+`, 'Brief': `
+
+<h1>EGP Overview</h1>
+
+        <p>Payment Centralization allows a one-time registration of credit card details on the 
+        Smiles app to be used across all categories: <strong>Food, Grocery, Home Services, 
+        Vouchers, Subscription, Bill Payment & Recharge.</strong> The main objective is to unify 
+        the user experience across all Smiles categories.</p>
+
+        <h2>What happens once Payment Centralization is implemented?</h2>
+        <ul>
+            <li><strong>Food, Voucher, Subscription, Bill Payment & Recharge</strong> transactors who have credit 
+            card details already registered on the Smiles app will not need to re-register their card on their next transaction.</li>
+            
+            <li><strong>Grocery & Home Services</strong> transactors who are also <strong>Food transactors</strong> and have credit card details 
+            already registered will not need to re-register their card on their next transaction.</li>
+            
+            <li><strong>Grocery & Home Services</strong> transactors who are <strong>not Food transactors</strong> will be required to 
+            re-register their card on their next transaction.</li>
+        </ul>
+
+        <p><span class="important">Important:</span> SMS and email notifications will be sent to customers 
+        who fall under Scenario #3 (Grocery & Home Services transactors, but non-Food transactors).</p>
 
 `
 
