--- a/index.html
+++ b/index.html
@@ -639,13 +639,13 @@ img.img-fluid {
   'Organizational Structure': [
     'Who Are We?'
  ],
+'EGP': ['Brief'],
 'SOPs': [
 'Dispatch',
 'MarketPlace',
 'Logistics',
 'Customer Service',
-'Dark Store' ],
-'EGP': ['Brief']
+'Dark Store' ]
         };
 
         const stepsDetails = {
@@ -2301,9 +2301,9 @@ img.img-fluid {
 
 <p>This SOP ensures smooth coordination between the CS and Dark Store teams, with clear protocols for handling customer complaints and escalations effectively.</p>
 
-`, 'Brief': `
-
-<h1>EGP Overview</h1>
+`, 
+'Brief': `
+       <h1>EGP Overview</h1>
 
         <p>Payment Centralization allows a one-time registration of credit card details on the 
         Smiles app to be used across all categories: <strong>Food, Grocery, Home Services, 
@@ -2324,7 +2324,6 @@ img.img-fluid {
 
         <p><span class="important">Important:</span> SMS and email notifications will be sent to customers 
         who fall under Scenario #3 (Grocery & Home Services transactors, but non-Food transactors).</p>
-
 `
 
 
