--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@ img.img-fluid {
             <option value="Q&A">Q&A</option>
             <option value="Organizational Structure">Organizational Structure</option>
             <option value="SOPs">SOPs</option>
+            <option value="Etisalat Gate Payment (EGP)">Etisalat Gate Payment (EGP)</option>
 
         </select>
 
@@ -639,7 +640,10 @@ img.img-fluid {
   'Organizational Structure': [
     'Who Are We?'
  ],
-'EGP': ['Brief'],
+'Etisalat Gate Payment (EGP)': [
+'Etisalat Payment Gateway (EPG)',
+'EGP-How does this impact our customers?'
+],
 'SOPs': [
 'Dispatch',
 'MarketPlace',
@@ -2302,27 +2306,55 @@ img.img-fluid {
 <p>This SOP ensures smooth coordination between the CS and Dark Store teams, with clear protocols for handling customer complaints and escalations effectively.</p>
 
 `, 
-'Brief': `
-       <h1>Etisalat Gate Payment (EGP) Overview</h1>
-    <p>Payment Centralization allows a one-time registration of credit card details on the 
-    Smiles app to be used across all categories: <strong>Food, Grocery, Home Services, 
-    Vouchers, Subscription, Bill Payment & Recharge.</strong> The main objective is to unify 
-    the user experience across all Smiles categories.</p>
+'Etisalat Payment Gateway (EPG)': `<h1>Etisalat Payment Gateway (EPG)</h1>
 
-    <h2>What happens once Payment Centralization is implemented?</h2>
+    <p>Etisalat Payment Gateway (EPG) is a comprehensive payment platform set up by Emirates Telecom Corporation (Etisalat) to offer electronic payment services within the region.</p>
+
+    <h2>Overview</h2>
+    <p>EPG is a next-generation payment platform that not only processes transactions but also provides peripheral services for customer and transaction management.</p>
+
+    <p>It connects merchants (sellers of products or services) in a secure manner with banks and financial institutions to process their transactions online. EPG facilitates online payments using various methods, including:</p>
+
     <ul>
-        <li><strong>Food, Voucher, Subscription, Bill Payment & Recharge</strong> transactors who have credit 
-        card details already registered on the Smiles app will not need to re-register their card on their next transaction.</li>
-        
-        <li><strong>Grocery & Home Services</strong> transactors who are also <strong>Food transactors</strong> and have credit card details 
-        already registered will not need to re-register their card on their next transaction.</li>
-        
-        <li><strong>Grocery & Home Services</strong> transactors who are <strong>not Food transactors</strong> will be required to 
-        re-register their card on their next transaction.</li>
+        <li>Credit Card</li>
+        <li>Debit Card</li>
+        <li>Bank Account</li>
+        <li>e-Dirham</li>
+        <li>e-Wallet</li>
     </ul>
 
-    <p><span class="important">Important:</span> SMS and email notifications will be sent to customers 
-    who fall under Scenario #3 (Grocery & Home Services transactors, but non-Food transactors).</p>`
+    <p>EPG supports a variety of payment channels such as:</p>
+
+    <ul>
+        <li>Internet</li>
+        <li>IVR</li>
+        <li>Kiosks</li>
+        <li>Mobile</li>
+    </ul>
+
+    <h2>Key Features</h2>
+    <p>EPG is built around industry standards, making it easy to integrate with merchants and financial institutions. It uses state-of-the-art Public Key Infrastructure (PKI) technology to ensure the security of payers, merchants, and banks from fraud.</p>
+`,
+'EGP-How does this impact our customers?':  `
+
+  <h1>Customer Experience Changes Based on Shopper Type</h1>
+
+    <p>Customer experience will vary depending on the type of shopper, particularly when it comes to saved card details.</p>
+
+    <h2>Types of Shoppers</h2>
+
+    <ul>
+        <li>
+            <h3>Universal Smiles Shopper</h3>
+            <p>If the customer is a <strong>universal Smiles shopper</strong>, meaning they shop across multiple verticals (e.g., groceries, devices, food, home services), their card details will be saved and accessible across all verticals. This ensures a seamless shopping experience, regardless of the product category.</p>
+        </li>
+        <li>
+            <h3>Grocery-only Shopper</h3>
+            <p>If the customer is exclusively a <strong>grocery shopper</strong>, after the live push, their card details will no longer be saved or accessible for grocery purchases.</p>
+        </li>
+    </ul>
+
+`
 
 };
 
