--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@ img.img-fluid {
 .img2 img,
 .imgs1 img,
 .imgs2 img,
-.imgs4 img {
+.imgs4 img,
+.imgEGP img,
+.imgEGP2 img {
     width: 200px;
     height: 300px;
 }
@@ -273,7 +275,9 @@ img.img-fluid {
     .img1 img,
     .img2 img,
     .imgs1 img,
-    .imgs2 img {
+    .imgs2 img,
+    .imgEGP img,
+    .imgEGP2 img {
         width: 150px;
         height: 225px;
     }
@@ -344,7 +348,9 @@ img.img-fluid {
 .imgs1 img,
 .imgs2 img,
 .close-btn
-.imgs4 img {
+.imgs4 img,
+.imgEGP img,
+.imgEGP2 img{
     transition: all 0.3s ease;
 }
 .img1 img {
@@ -363,6 +369,12 @@ img.img-fluid {
     animation: fadeInUp 0.8s ease-out 0.8s;
 }
 .imgs4 img {
+    animation: fadeInUp 0.8s ease-out 0.8s;
+}
+.imgEGP img {
+    animation: fadeInUp 0.8s ease-out 0.8s;
+}
+.imgEGP2 img {
     animation: fadeInUp 0.8s ease-out 0.8s;
 }
 @keyframes bounce {
@@ -410,7 +422,9 @@ img.img-fluid {
 .img2 img,
 .imgs1 img,
 .imgs2 img,
-.imgs4 img {
+.imgs4 img,
+.imgEGP img,
+.imgEGP2 img {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -418,8 +432,10 @@ img.img-fluid {
 .img1 img:hover,
 .img2 img:hover,
 .imgs1 img:hover,
-.imgs2 img:hover
-.imgs4 img:hover {
+.imgs2 img:hover,
+.imgs4 img:hover,
+.imgEGP img:hover,
+.imgEGP2 img:hover{
     animation: imageHover 0.3s forwards;
 }
 @keyframes fadeInUp {
@@ -652,7 +668,8 @@ img.img-fluid {
 'Etisalat Gate Payment (EGP)': [
 'Etisalat Payment Gateway (EPG)',
 'EGP-How does this impact our customers?',
-'EGP-How can customer add the card details again?'
+'EGP-How can customer add the card details again?',
+'EGP-Refunds'
 ],
 'SOPs': [
 'Dispatch',
