--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ img.img-fluid {
             <option value="Q&A">Q&A</option>
             <option value="Organizational Structure">Organizational Structure</option>
             <option value="SOPs">SOPs</option>
-            <option value="Etisalat Gate Payment (EGP)">Etisalat Gate Payment (EGP)</option>
+            <option value="Etisalat Payment Gate (EPG)">Etisalat Payment Gateway (EPG)</option>
 
         </select>
 
@@ -665,11 +665,11 @@ img.img-fluid {
   'Organizational Structure': [
     'Who Are We?'
  ],
-'Etisalat Gate Payment (EGP)': [
+'Etisalat Payment Gateway (EPG)': [
 'Etisalat Payment Gateway (EPG)',
-'EGP-How does this impact our customers?',
-'EGP-How can customer add the card details again?',
-'EGP-Refunds'
+'EPG-How does this impact our customers?',
+'EPG-How can customer add the card details again?',
+'EPG-Refunds'
 ],
 'SOPs': [
 'Dispatch',
@@ -2362,7 +2362,7 @@ img.img-fluid {
     <h2>Key Features</h2>
     <p>EPG is built around industry standards, making it easy to integrate with merchants and financial institutions. It uses state-of-the-art Public Key Infrastructure (PKI) technology to ensure the security of payers, merchants, and banks from fraud.</p>
 `,
-'EGP-How does this impact our customers?':  `
+'EPG-How does this impact our customers?':  `
 
   <h1>Customer Experience Changes Based on Shopper Type</h1>
 
@@ -2381,7 +2381,7 @@ img.img-fluid {
         </li>
     </ul>
 
-`, 'EGP-How can customer add the card details again?': `
+`, 'EPG-How can customer add the card details again?': `
 
  <div class="imgEGP">
             <img src="imgs4/one.png" alt="How to add card">
@@ -2433,7 +2433,7 @@ img.img-fluid {
     </ol>
 
 `,
-'EGP-Refunds': `
+'EPG-Refunds': `
 
 
 <h1>Refunds and Reversals</h1>
