--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ img.img-fluid {
             <option value="Q&A">Q&A</option>
             <option value="Organizational Structure">Organizational Structure</option>
             <option value="SOPs">SOPs</option>
-            <option value="Etisalat Payment Gate (EPG)">Etisalat Payment Gateway (EPG)</option>
+            <option value="Etisalat Payment Gateway (EPG)">Etisalat Payment Gateway (EPG)</option>
 
         </select>
 
@@ -666,7 +666,7 @@ img.img-fluid {
     'Who Are We?'
  ],
 'Etisalat Payment Gateway (EPG)': [
-'Etisalat Payment Gateway (EPG)',
+'Etisalat Payment Gateway (epg)',
 'EPG-How does this impact our customers?',
 'EPG-How can customer add the card details again?',
 'EPG-Refunds'
