--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ img.img-fluid {
     'Who Are We?'
  ],
 'Etisalat Payment Gateway (EPG)': [
-'Etisalat Payment Gateway (epg)',
+'Etisalat Payment Gateway (EPG)',
 'EPG-How does this impact our customers?',
 'EPG-How can customer add the card details again?',
 'EPG-Refunds'
